syntax = "proto3";

package movementlabs.protocol_units.bridge.v1beta1;

service Bridge {
  // RPC method for initiating a bridge transfer
  rpc InitiateBridgeTransfer (InitiateBridgeTransferRequest) returns (InitiateBridgeTransferResponse) {}
}

// Request message for InitiateBridgeTransfer
message InitiateBridgeTransferRequest {
  // Recipient address (32-byte array)
  bytes recipient_address = 2;
  
  // Hash lock (32-byte array)
  bytes hash_lock = 3;
  
  // Amount of ETH to transfer
  uint64 amount = 4;
}

// Response message for InitiateBridgeTransfer
message InitiateBridgeTransferResponse {
  // Indicates whether the operation was successful
  bool success = 1;
  
  // Optional error message if the operation failed
  string error_message = 2;
}

